src/objects/Redwood_Contract_Change_Log__c.object
<CustomObject>
    <fields>
        <fullName>Amendment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>The date the change ends</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Redwood_Contract__c</fullName>
        <label>Redwood Contract</label>
        <referenceTo>Redwood_Contract__c</referenceTo>
        <relationshipName>Redwood_Contract_Amendment_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>the date the change takes effect</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_Change__c</fullName>
        <label>Type(s) of Change</label>
        <picklist>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Whats_Changing__c</fullName>
        <label>Whats Changing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Why_is_it_changing__c</fullName>
        <label>Why is it changing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Redwood Contract Change Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redwood Contract Change Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>